[gd_scene load_steps=12 format=3 uid="uid://dwyhq8l5v8ht3"]

[ext_resource type="Script" path="res://Scripts/notification.gd" id="1_kh8oi"]
[ext_resource type="FontFile" uid="uid://bgx8gu7aobui5" path="res://assets/Fonts/pixel_font.ttf" id="2_uuifu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86xhf"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.941176)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.698039, 0.854902, 0.0196078, 1)
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
shadow_color = Color(0, 0, 0, 0.34902)
shadow_size = 4
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3mkj"]
bg_color = Color(0.698039, 0.854902, 0.0196078, 1)
border_color = Color(0.698039, 0.854902, 0.0196078, 1)
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0

[sub_resource type="LabelSettings" id="LabelSettings_gy3dh"]
font = ExtResource("2_uuifu")
font_size = 24
font_color = Color(0.054902, 0.054902, 0.054902, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 0.188235)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_iln5i"]
font = ExtResource("2_uuifu")
font_size = 10
font_color = Color(0.054902, 0.054902, 0.054902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3owp"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.831373)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.698039, 0.854902, 0.0196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7uvkj"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.831373)

[sub_resource type="Animation" id="Animation_73upb"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(20, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mim1d"]
resource_name = "fade_out"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(20, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jegjl"]
_data = {
"fade_in": SubResource("Animation_73upb"),
"fade_out": SubResource("Animation_mim1d")
}

[node name="Notification" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 350.0
offset_bottom = 70.0
script = ExtResource("1_kh8oi")

[node name="Container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_86xhf")

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="IconPanel" type="Panel" parent="Container"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_r3mkj")

[node name="ElementSymbol" type="Label" parent="Container/IconPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -16.5
offset_right = 20.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
text = "Br"
label_settings = SubResource("LabelSettings_gy3dh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ElementNumber" type="Label" parent="Container/IconPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
text = "35"
label_settings = SubResource("LabelSettings_iln5i")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Container"]
layout_mode = 2
theme_override_constants/margin_left = 68
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Container/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="TitlePanel" type="PanelContainer" parent="Container/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k3owp")

[node name="TitleLabel" type="Label" parent="Container/MarginContainer/VBoxContainer/TitlePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.698039, 0.854902, 0.0196078, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_uuifu")
theme_override_font_sizes/font_size = 14
text = "NOTIFICATION TITLE"
text_overrun_behavior = 3
uppercase = true

[node name="ContentPanel" type="PanelContainer" parent="Container/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7uvkj")

[node name="MessageLabel" type="RichTextLabel" parent="Container/MarginContainer/VBoxContainer/ContentPanel"]
layout_mode = 2
theme_override_colors/default_color = Color(0.847059, 0.847059, 0.847059, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/normal_font = ExtResource("2_uuifu")
theme_override_font_sizes/normal_font_size = 12
text = "Notification message goes here"
scroll_active = false
text_direction = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jegjl")
}
autoplay = "fade_in"

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"] 